// /*
//  * This file was generated by the Gradle 'init' task.
//  *
//  * This generated file contains a sample Java application project to get you started.
//  * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.13/userguide/building_java_projects.html in the Gradle documentation.
//  */

plugins {
    id 'application'
    id 'com.diffplug.spotless' version '6.23.3'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation files('lib/Ludii-1.3.14.jar')
    implementation libs.guava
    testImplementation libs.junit
    implementation("com.fasterxml.jackson.core:jackson-databind:2.0.1")
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'main.LaunchLudii'
}

spotless {
    java {
        // googleJavaFormat()
        palantirJavaFormat()
        target 'src/**/*.java'
    }
}

// wget
tasks.register('downloadLudiiJar', Exec) {
    description = 'Download Ludii-1.3.14.jar to lib directory'
    group = 'download'
    commandLine 'wget', '-P', 'lib', '-N', 'https://ludii.games/downloads/Ludii-1.3.14.jar'
}

// download ludi for windows
// TODO: find out how to detect OS and use proper command
tasks.register('downloadLudiiJarWindows', Exec) {
    description = 'Download Ludii-1.3.14.jar to lib directory'
    group = 'download'
    commandLine 'powershell', '-NoProfile', '-Command',
                "if (!(Test-Path lib)) { New-Item -ItemType Directory -Path lib } ; " +
                "Invoke-WebRequest 'https://ludii.games/downloads/Ludii-1.3.14.jar' -OutFile 'lib/Ludii-1.3.14.jar' -UseBasicParsing"
}

// tasks.named('compileJava') {
//     dependsOn tasks.named('downloadLudiiJar')
// }
